<resources>
    <string name="app_name">TicTockOnline</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_firstname">Not a valid first name</string>
    <string name="invalid_lastname">Not a valid last name</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_option">Sign in</string>
    <string name="create_an_account_option">or create an account</string>
    <string name="or_sign_in_to_your_account">or sign in to your account</string>
    <string name="player1_win_statement">%s Won %s</string>
    <string name="player2_win_statement">%s Won %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">ticktac_notification_channel</string>
    <string name="channel_descrition">Tic tac toe game notification</string>

</resources>